--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --base-href 'https://admin.uhumanco.com/'",
+    "wrap":  "ngh --dir dist/argon-dashboard-angular-master",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
